<resources>
    <string name="app_name">Arch RoamRight TSB</string>
    <string name="HomeActivityTitle">Select From</string>
    <string name="btnPreExisting">Check Pre-Existing Conditions Eligibility</string>
    <string name="btnFreeLookPeriod">Check Free Look Period Eligibility</string>
    <string name="btnPreExEligibility">Determine Pre-Ex Eligibility</string>
    <string name="preExistingActivityTitle">Calculate Pre-Existing Eligibility</string>
    <string name="initialDepositDate">Enter Initial Deposit Date</string>
    <string name="customerInquiryDate">Enter Customer Inquiry Date</string>
</resources>
