<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".HomeActivity">

    <TextView android:id="@+id/fullscreen_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:keepScreenOn="true"
              android:text="@string/HomeActivityTitle"
              android:textColor="#000"
              android:textSize="25sp" />

    <Button android:id="@+id/btnPreExisting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullscreen_content"
            android:text="@string/btnPreExisting"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textAllCaps="false"/>

    <Button android:id="@+id/btnFreeLookPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPreExisting"
            android:text="@string/btnFreeLookPeriod"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textAllCaps="false"/>

</RelativeLayout>